Canal的项目的配置，监控mysql的建库

--- a/实时数据仓库构建.md
+++ b/实时数据仓库构建.md
@@ -1,11 +1,19 @@
 1、在mysql中创建数据库gma
+create database gma
+
 
 2、创建所有的表
-init_mysql_table.sql
+init_mysql_table.sql  
+
+![img.png](img.png)
+执行sql脚本即可
+
 
 
 3、开启canal动态topic功能
 vim /usr/local/soft/canal/conf/example/instance.properties
+
+
 # 监控gma数据库，不同的表发送到表名的topic上
 canal.mq.dynamicTopic=gma\\..*
 
